@@ -171,6 +171,18 @@ class TestSLOReader( unittest.TestCase ) :
 		
 		self.assertEqual( s.blindData()["ri:orderedParameterNames"], StringVectorData( [ "Ka", "Kd" ] ) )
 
+	def testAnnotations( self ) :
+	
+		self.assertEqual( os.system( "shaderdl -o test/IECoreRI/shaders/types.sdl test/IECoreRI/shaders/types.sl" ), 0 )
+
+		r = SLOReader( "test/IECoreRI/shaders/types.sdl" )
+		s = r.read()
+		
+		self.assertTrue( "ri:annotations" in s.blindData() )
+		
+		self.assertEqual( s.blindData()["ri:annotations"]["author"], StringData( "JohnJohn" ) )
+		self.assertEqual( s.blindData()["ri:annotations"]["version"], StringData( "1.0" ) )
+	
 	def tearDown( self ) :
 
 		for f in [ "test/IECoreRI/shaders/types.sdl" ] :
