@@ -1,3 +1,6 @@
+#pragma annotation "author" "JohnJohn"
+#pragma annotation "version" "1.0"
+
 surface types(
 	float f = 1;
 	string s = "s";
