@@ -33,6 +33,7 @@ Improvements :
 * Primitives provide a hash of their topology in addition to the complete hash (including primitive variables).
 * LRUCache class now accepts an optional removalCallback, which is called whenever an item is removed from the cache.
 * IECoreHoudini has new ParameterisedHolderInterface and ParameterisedHolder base classes, so we can hold parameterised objects in non-SOP contexts.
+* IECoreRI::SLOReader now loads shader annotations, providing them as an "ri:annotations" entry in the shader blind data.
 
 7.10.2 :
 
